Enable pkce in dev and staging

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=something_secret
 POSTGRES_DB=ttasmarthub
 POSTGRES_HOST=localhost
+OIDC_AUTH_METHOD=pkce
 # Use this client-id to test locally (using localhost)
 AUTH_CLIENT_ID=urn:gov:gsa:openidconnect.profiles:sp:sso:ohs:tta-hub-local
 # AUTH_CLIENT_ID=urn:gov:gsa:openidconnect.profiles:sp:sso:ohs:tta-hub
