--- a/deployment_config/prod_vars.yml
+++ b/deployment_config/prod_vars.yml
@@ -15,6 +15,7 @@ AUTH_BASE: https://hses.ohs.acf.hhs.gov
 # This env variable should go away soon in favor of TTA_SMART_HUB_URI
 REDIRECT_URI_HOST: https://ttahub.ohs.acf.hhs.gov
 TTA_SMART_HUB_URI: https://ttahub.ohs.acf.hhs.gov
+OIDC_AUTH_METHOD: "private_key_jwt"
 CLAMAV_ENDPOINT: https://clamapi-ttahub-prod.apps.internal:9443
 
 SMARTSHEET_ENDPOINT: ""
