--- a/deployment_config/staging_vars.yml
+++ b/deployment_config/staging_vars.yml
@@ -9,6 +9,7 @@ AUTH_BASE: https://staging.hses.ohs.acf.hhs.gov
 # This env variable should go away soon in favor of TTA_SMART_HUB_URI
 REDIRECT_URI_HOST: https://tta-smarthub-staging.app.cloud.gov
 TTA_SMART_HUB_URI: https://tta-smarthub-staging.app.cloud.gov
+OIDC_AUTH_METHOD: "pkce"
 CLAMAV_ENDPOINT: https://clamapi-ttahub-dev.apps.internal:9443
 SEND_NOTIFICATIONS: "true"
 SUPPRESS_ERROR_LOGGING: "false"
