Update environment variables

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,13 @@ POSTGRES_DB=ttasmarthub
 POSTGRES_HOST=localhost
 OIDC_AUTH_METHOD=pkce
 # Use this client-id to test locally (using localhost)
-AUTH_CLIENT_ID=urn:gov:gsa:openidconnect.profiles:sp:sso:ohs:tta-hub-local
-# AUTH_CLIENT_ID=urn:gov:gsa:openidconnect.profiles:sp:sso:ohs:tta-hub
+AUTH_CLIENT_ID=<1pass>-local
+# AUTH_CLIENT_ID=<1pass>
 SESSION_SECRET=secret
 JWT_SECRET=secret
 TTA_SMART_HUB_URI=http://localhost:3000
-AUTH_BASE=https://test.hsesinfo.org/oidc
-# AUTH_BASE=https://staging.hses.ohs.acf.hhs.gov/oidc
+# AUTH_BASE=https://test.hsesinfo.org/oidc
+AUTH_BASE=https://staging.hses.ohs.acf.hhs.gov/oidc
 # Use to test using the login.gov sandbox environment
 # AUTH_BASE=https://idp.int.identitysandbox.gov
 # This env variable should go away soon in favor of TTA_SMART_HUB_URI
