--- a/deployment_config/staging_vars.yml
+++ b/deployment_config/staging_vars.yml
@@ -5,7 +5,7 @@ worker_instances: 1
 worker_memory: 512M
 app_disk_quota: 4GB
 LOG_LEVEL: info
-AUTH_BASE: https://staging.hses.ohs.acf.hhs.gov
+AUTH_BASE: https://staging.hses.ohs.acf.hhs.gov/oidc
 # This env variable should go away soon in favor of TTA_SMART_HUB_URI
 REDIRECT_URI_HOST: https://tta-smarthub-staging.app.cloud.gov
 TTA_SMART_HUB_URI: https://tta-smarthub-staging.app.cloud.gov
