--- a/.github/workflows/db_restore.yml
+++ b/.github/workflows/db_restore.yml
@@ -3,13 +3,15 @@ on:
   workflow_call:
     inputs:
       source:
-        description: "production" or 'processed' (anonymized data)
+        description: "production" or "processed" (anonymized data)
         required: true
         type: string
+        default: "processed"
       source_date:
         description: either "latest" or a date in YYYY-MM-DD format
         required: true
         type: string
+        default: "latest"
       target_db:
         description: Name of the db to restore into, e.g. "ttahub-dev-blue"
         required: true
