--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -679,6 +679,8 @@ jobs:
     steps:
     - checkout
     - install_cf_tools
+    cf_login:
+        target_env: << parameters.target_env >>
     - run:
         name: Clear build cache
         command: |
