--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -27,7 +27,7 @@ services:
       # export PUPPETEER_EXECUTABLE_PATH=`which chromium`
       - PUPPETEER_EXECUTABLE_PATH
       - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-      - OICD_AUTH_METHOD=pkce
+      - OIDC_AUTH_METHOD=pkce
     volumes:
       - ".:/app:rw"
       - "node_modules-backend:/app/node_modules:rw"
