--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -653,6 +653,7 @@ jobs:
         logfile: cmd_log.txt
     - run:
         when: always
+        name: Create monitoring updates summary
         command: |
           if grep -o "Recent Monitoring Updates: \[\]" cmd_log.txt; then
             echo "No new monitoring updates ($(date -I))" > monitoring-updates.txt
@@ -662,7 +663,8 @@ jobs:
             json_data=${results#*"$delim"}
             goals=$(echo "$json_data" | jq -jr '.[] | .recipient, " (Region ", .region, ")\n"')
             echo "Monitoring Updates:\n\`\`\`${goals}\`\`\`" > monitoring-updates.txt
-            echo $(grep -o "Error: .*" cmd_log.txt | tail -n 1) >> monitoring-updates.txt
+            echo "Error: test" >> cmd_log.txt
+            echo $(grep -o "Error .*" cmd_log.txt | tail -n 1) >> monitoring-updates.txt
           fi
           cat monitoring-updates.txt
     - when:
