Fix the local logout

--- a/deployment_config/prod_vars.yml
+++ b/deployment_config/prod_vars.yml
@@ -24,6 +24,7 @@ SUPPRESS_ERROR_LOGGING: "false"
 FORCE_CRON: "false"
 
 AUTH_CLIENT_ID: "${PROD_AUTH_CLIENT_ID}"
+PRIVATE_JWK_64: "${PRIVATE_JWK_64}"
 AUTH_CLIENT_SECRET: "${PROD_AUTH_CLIENT_SECRET}"
 cg_username: "${CLOUDGOV_PROD_USERNAME}"
 cg_password: "${CLOUDGOV_PROD_PASSWORD}"
