--- a/manifest.yml
+++ b/manifest.yml
@@ -10,6 +10,7 @@ applications:
       AUTH_CLIENT_ID: ((AUTH_CLIENT_ID))
       AUTH_CLIENT_SECRET: ((AUTH_CLIENT_SECRET))
       OIDC_AUTH_METHOD: ((OIDC_AUTH_METHOD))
+      PRIVATE_JWK_64: ((PRIVATE_JWK_64))
       BUILD_BRANCH: ((BUILD_BRANCH))
       BUILD_COMMIT: ((BUILD_COMMIT))
       BUILD_NUMBER: ((BUILD_NUMBER))
