set to no value

--- a/deployment_config/staging_vars.yml
+++ b/deployment_config/staging_vars.yml
@@ -27,7 +27,7 @@ cg_org: hhs-acf-ohs-tta
 
 AUTH_CLIENT_ID: ${STAGING_AUTH_CLIENT_ID}
 AUTH_CLIENT_SECRET: ${STAGING_AUTH_CLIENT_SECRET}
-PRIVATE_JWK_64: "${PRIVATE_JWK_64}"
+PRIVATE_JWK_64: ""
 
 SESSION_SECRET: "${STAGING_SESSION_SECRET}"
 JWT_SECRET: "${STAGING_JWT_SECRET}"
