Remove unneeded environment variable

--- a/deployment_config/dev_vars.yml
+++ b/deployment_config/dev_vars.yml
@@ -29,8 +29,7 @@ SUPPRESS_ERROR_LOGGING: "false"
 SMARTSHEET_ENDPOINT: https://api.smartsheetgov.com/2.0/
 
 AUTH_CLIENT_ID: "${DEV_AUTH_CLIENT_ID}"
-PRIVATE_JWK_64: "${PRIVATE_JWK_64}"
-AUTH_CLIENT_SECRET: "${DEV_AUTH_CLIENT_SECRET}"
+PRIVATE_JWK_64: ""
 SESSION_SECRET: "${DEV_SESSION_SECRET}"
 JWT_SECRET: "${DEV_JWT_SECRET}"
 HSES_DATA_FILE_URL: "${HSES_DATA_FILE_URL}"
