--- a/.github/workflows/db_restore.yml
+++ b/.github/workflows/db_restore.yml
@@ -46,5 +46,5 @@ jobs:
           cf-version: "8.4.1"
       - name: Cloud Gov Login
         run: cf login -u ${{ secrets.CG_DEV_USERNAME }} -p ${{ secrets.CG_DEV_PASSWORD }} -o hhs-acf-ohs-tta -a https://api.fr.cloud.gov -s ${{ secrets.CG_DEV_SPACE }} 
-      - name: Run restore script
-        run: db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}
+      # - name: Run restore script
+      #   run: db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}
