--- a/package.json
+++ b/package.json
@@ -293,6 +293,7 @@
     "@cucumber/cucumber": "^7.0.0",
     "@hapi/joi": "^17.1.1",
     "@playwright/test": "^1.28.0",
+    "@types/dompurify": "^3.2.0",
     "@types/hapi__joi": "^17.1.14",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -352,7 +353,7 @@
     "csv-stringify": "^5.6.2",
     "cucumber-html-reporter": "^5.2.0",
     "deepmerge": "^4.3.1",
-    "dompurify": "^3.2.4",
+    "dompurify": "^3.3.0",
     "dot-wild": "^3.0.1",
     "dotenv": "^16.4.1",
     "email-templates": "^8.0.4",
