--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.5.1",
     "csv-parse": "^4.14.1",
     "detect-file-encoding-and-language": "^2.4.0",
+    "dompurify": "^3.3.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "ejs": "^3.1.7",
