--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -930,7 +930,7 @@ commands:
           cat environments/envs.json
           data=$(jq -r '"| Name | Branch | Date |", "|---|---|---|", (.[] | "| \(.username) | \(.branch) | \(.updated) |")' envs.json)
 
-          response=$(curl -sv -X POST \
+          curl -sv -X POST \
             https://slack.com/api/canvases.edit \
             -H "Authorization: Bearer ${SLACK_BOT_TOKEN}" \
             -H 'Content-type: application/json;charset=utf-8' \
@@ -945,7 +945,7 @@ commands:
                   }
                 },
               }]
-            }' 2>&1)
+            }'
 
     - save_cache:
         key: 'environment-owners'
