--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -930,7 +930,7 @@ commands:
           cat environments/envs.json
           data=$(jq -r '"| Name | Branch | Date |", "|---|---|---|", (.[] | "| \(.username) | \(.branch) | \(.updated) |")' envs.json)
 
-          curl -w "%{http_code}\n" --fail-with-body -X POST \
+          curl -w "\n%{http_code}\n" --fail-with-body -X POST \
             https://slack.com/api/canvases.edit \
             -H "Authorization: Bearer ${SLACK_BOT_TOKEN}" \
             -H 'Content-type: application/json;charset=utf-8' \
@@ -939,10 +939,8 @@ commands:
               "changes": [{
                 "operation": "replace",
                 "document_content": {
-                  "document": {
-                    "type": "markdown",
-                    "markdown": "${data}"
-                  }
+                  "type": "markdown",
+                  "markdown": "${data}"                  
                 },
               }]
             }'
