--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -940,7 +940,7 @@ commands:
                 "operation": "replace",
                 "document_content": {
                   "type": "markdown",
-                  "markdown": "${data}"                  
+                  "markdown": ${data}                 
                 },
               }]
             }'
