--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -929,6 +929,7 @@ commands:
           node bin/write_envs.js ${current_env} ${CIRCLE_USERNAME} ${CIRCLE_BRANCH} environments/envs.json
           cat environments/envs.json
           data=$(jq -r '"| Name | Branch | Date |", "|---|---|---|", (.[] | "| \(.username) | \(.branch) | \(.updated) |")' envs.json)
+          echo $data
 
           curl -w "\n%{http_code}\n" --fail-with-body -X POST \
             https://slack.com/api/canvases.edit \
@@ -942,7 +943,7 @@ commands:
                   "type": "markdown",
                   "markdown": ${data}                 
                 },
-              }]
+              }],
             }'
 
     - save_cache:
