--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -928,7 +928,7 @@ commands:
           current_env="<< parameters.target_env >>"
           node bin/write_envs.js ${current_env} ${CIRCLE_USERNAME} ${CIRCLE_BRANCH} environments/envs.json
           cat environments/envs.json
-          data=$(jq -r '"| Name | Branch | Date |", "|---|---|---|", (.[] | "| \(.username) | \(.branch) | \(.updated) |")' envs.json)
+          data=$(jq -r '"| Name | Branch | Date |\n", "|---|---|---|\n", (.[] | "| \(.username) | \(.branch) | \(.updated) |\n")' envs.json)
           echo -e ${data}
 
           curl -w "\n%{http_code}\n" --fail-with-body -X POST \
