--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -928,8 +928,8 @@ commands:
           current_env="<< parameters.target_env >>"
           node bin/write_envs.js ${current_env} ${CIRCLE_USERNAME} ${CIRCLE_BRANCH} environments/envs.json
           cat environments/envs.json
-          data=$(jq -r '"| Name | Branch | Date |\n", "|---|---|---|\n", (.[] | "| \(.username) | \(.branch) | \(.updated) |\n")' envs.json)
-          echo -e ${data}
+          data=$(jq -r '"| Name | Branch | Date |", "|---|---|---|", (.[] | "| \(.username) | \(.branch) | \(.updated) |")' envs.json)
+          echo ${data}
 
           curl -w "\n%{http_code}\n" --fail-with-body -X POST \
             https://slack.com/api/canvases.edit \
@@ -941,7 +941,7 @@ commands:
                 "operation": "replace",
                 "document_content": {
                   "type": "markdown",
-                  "markdown": ${data}                 
+                  "markdown": "${data}"                 
                 },
               }],
             }'
