--- a/deployment_config/dev_vars.yml
+++ b/deployment_config/dev_vars.yml
@@ -14,6 +14,8 @@ cg_password: ${CLOUDGOV_DEV_PASSWORD}
 cg_space: ${CLOUDGOV_DEV_SPACE}
 new_relic_app_id: 867221900
 
+slack_token: ${SLACK_BOT_TOKEN}
+
 LOG_LEVEL: debug
 SUPPRESS_ERROR_LOGGING: "false"
 SEND_NOTIFICATIONS: "true"
