lol bash quotes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -929,7 +929,7 @@ commands:
           current_env="<< parameters.target_env >>"
           node bin/write_envs.js ${current_env} ${CIRCLE_USERNAME} ${CIRCLE_BRANCH} environments/envs.json
           cat environments/envs.json
-          data=$(jq -r '"| Name | Branch | Date |", "|---|---|---|", (.[] | "| \(.username) | \(.branch) | \(.updated) |")' envs.json)
+          data=$(jq -r '"| Name | Branch | Date |", "|---|---|---|",(.[] | "| \(.username) | \(.branch) | \(.updated) |")' environments/envs.json
 
           curl -w "\n%{http_code}\n" --fail-with-body -X POST \
             https://slack.com/api/canvases.edit \
@@ -941,7 +941,7 @@ commands:
                 "operation": "replace",
                 "document_content": {
                   "type": "markdown",
-                  "markdown": \"${data}\"                 
+                  "markdown": "'"${data}"'"         
                 },
               }],
             }'
