--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -931,7 +931,7 @@ commands:
           # eng: F09459NAEKB
 
           cd environments
-          echo "${current_env} | ${CIRCLE_USERNAME} | ${CIRCLE_BRANCH} | $(date +"%Y-%m-%d" > current_env
+          echo "${current_env} | ${CIRCLE_USERNAME} | ${CIRCLE_BRANCH} | $(date +"%Y-%m-%d")" > current_env
           data="Env | Name | Branch | Date |\n|---|---|---|---|\n"
           for file in *; do
             if [ ! -d ${file} ]; then
