--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -921,6 +921,8 @@ commands:
     steps:
     - restore_cache:
         key: 'environment-owners'
+        paths:
+        - environments
     - run:
         name: Write owner into file
         command: |
