--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -932,7 +932,7 @@ commands:
 
           cd environments
           ls -la
-          echo "${current_env} | ${CIRCLE_USERNAME} | ${CIRCLE_BRANCH} | $(date +"%Y-%m-%d")" > current_env
+          echo "${current_env} | ${CIRCLE_USERNAME} | ${CIRCLE_BRANCH} | $(date +"%Y-%m-%d")" > ${current_env}
           data="Env | Name | Branch | Date |\n|---|---|---|---|\n"
           for file in *; do
             cat ${file}
