--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint:fix:single": "eslint --fix",
     "lint:fix:all": "yarn lint:fix && yarn --cwd frontend lint:fix",
     "clean": "rm -rf coverage reports frontend/coverage frontend/reports frontend/build",
-    "docs:serve": "npx redoc-cli serve -p 5003 docs/openapi/index.yaml",
+    "docs:serve": "npx @redocly/cli preview-docs -p 5003 docs/openapi/index.yaml",
     "cucumber": "./node_modules/.bin/cucumber-js --publish ./cucumber/features/*.feature -f json:./reports/cucumber_report.json && node ./cucumber/index.js",
     "cucumber:ci": "cross-env TTA_SMART_HUB_URI=http://localhost:3000 yarn cucumber",
     "e2e": "./node_modules/.bin/playwright test --config=tests/e2e/playwright.config.js",
@@ -117,8 +117,8 @@
     "url": "git+https://github.com/adhocteam/Head-Start-TTADP.git"
   },
   "resolutions": {
-    "axe-core": "4.6.3",
-    "@axe-core/webdriverjs": "4.6.0",
+    "axe-core": "^4.11.0",
+    "@axe-core/webdriverjs": "^4.11.0",
     "ansi-regex": "^5.0.1",
     "body-parser": "^1.20.3",
     "colors": "1.4.0",
@@ -132,7 +132,7 @@
     "protobufjs": "^7.2.4",
     "got": "^11.8.5",
     "undici": "^5.10.0",
-    "selenium-webdriver": "4.3.0",
+    "selenium-webdriver": "^4",
     "json5": "^2.2.3",
     "luxon": "^1.23.1",
     "qs": "^6.9.7",
@@ -282,8 +282,8 @@
     ]
   },
   "devDependencies": {
-    "@axe-core/cli": "4.6.0",
-    "@axe-core/playwright": "^4.6.0",
+    "@axe-core/cli": "^4.11.0",
+    "@axe-core/playwright": "^4.11.0",
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
@@ -292,7 +292,8 @@
     "@babel/preset-typescript": "^7.18.6",
     "@cucumber/cucumber": "^7.0.0",
     "@hapi/joi": "^17.1.1",
-    "@playwright/test": "^1.28.0",
+    "@playwright/test": "^1.55.1",
+    "@redocly/cli": "^2.7.0",
     "@types/hapi__joi": "^17.1.14",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -322,7 +323,6 @@
     "playwright": "^1.55.1",
     "puppeteer": "^13.1.1",
     "puppeteer-select": "^1.0.3",
-    "redoc-cli": "^0.13.2",
     "selenium-webdriver": "4.3.0",
     "sinon": "^15.0.0",
     "supertest": "^6.1.3",
@@ -335,8 +335,12 @@
     "@faker-js/faker": "^6.0.0",
     "@mesh-kit/core": "^1.0.0",
     "@opensearch-project/opensearch": "^1.1.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/otlp-exporter-base": "^0.207.0",
     "@ttahub/common": "2.2.14",
+    "@types/ioredis-mock": "^8.2.6",
     "adm-zip": "^0.5.1",
+    "ajv": "^8.17.1",
     "aws-sdk": "^2.826.0",
     "aws4": "^1.11.0",
     "axios": "^1.12.0",
@@ -345,8 +349,10 @@
     "cheerio": "^1.0.0-rc.10",
     "client-oauth2": "^4.3.3",
     "cls-hooked": "^4.2.2",
+    "colors": "^1",
     "connect-redis": "6",
     "cookie-session": "^2.0.0",
+    "core-js": "^3.46.0",
     "cron": "1.8.3",
     "csv-parse": "^4.14.1",
     "csv-stringify": "^5.6.2",
@@ -381,8 +387,10 @@
     "newrelic": "^12.16.1",
     "nodemailer": "^7.0.7",
     "openid-client": "^6.6.4",
+    "opentelemetry": "^0.1.0",
     "pg": "^8.3.3",
     "plantuml-encoder": "^1.4.0",
+    "playwright-core": "^1.56.1",
     "pug": "^3.0.3",
     "redis": "^4.0.6",
     "sax": "^1.3.0",
@@ -398,7 +406,7 @@
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "wait-for-expect": "^3.0.2",
-    "winston": "^3.3.3",
+    "winston": "^3.18",
     "ws": "^8.17.1",
     "xml2js": "^0.6.2",
     "yargs": "^17.7.2",
