--- a/package.json
+++ b/package.json
@@ -121,7 +121,6 @@
     "@axe-core/webdriverjs": "^4.11.0",
     "ansi-regex": "^5.0.1",
     "body-parser": "^1.20.3",
-    "colors": "1.4.0",
     "follow-redirects": "^1.15.6",
     "json-pointer": "0.6.2",
     "marked": "^4.0.10",
@@ -282,8 +281,6 @@
     ]
   },
   "devDependencies": {
-    "@axe-core/cli": "^4.11.0",
-    "@axe-core/playwright": "^4.11.0",
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
@@ -292,10 +289,11 @@
     "@babel/preset-typescript": "^7.18.6",
     "@cucumber/cucumber": "^7.0.0",
     "@hapi/joi": "^17.1.1",
-    "@playwright/test": "^1.55.1",
+    "@playwright/test": "^1.56.1",
     "@redocly/cli": "^2.7.0",
     "@types/hapi__joi": "^17.1.14",
     "@types/jest": "^29.5.12",
+    "@types/node": "^24.9.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-jest": "29.7.0",
@@ -320,7 +318,6 @@
     "mock-fs": "^5.4.1",
     "nodemon": "^2.0.4",
     "nyc": "^17.1.0",
-    "playwright": "^1.55.1",
     "puppeteer": "^13.1.1",
     "puppeteer-select": "^1.0.3",
     "selenium-webdriver": "4.3.0",
@@ -331,6 +328,8 @@
     "umzug": "^3.2.1"
   },
   "dependencies": {
+    "@axe-core/cli": "^4.11.0",
+    "@axe-core/playwright": "^4.11.0",
     "@babel/runtime": "^7.26.10",
     "@faker-js/faker": "^6.0.0",
     "@mesh-kit/core": "^1.0.0",
@@ -349,7 +348,6 @@
     "cheerio": "^1.0.0-rc.10",
     "client-oauth2": "^4.3.3",
     "cls-hooked": "^4.2.2",
-    "colors": "^1",
     "connect-redis": "6",
     "cookie-session": "^2.0.0",
     "core-js": "^3.46.0",
